--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=smart-money
 
-exchangeRates="https://api.nbp.pl/api/exchangerates/tables/A/{date}/?format=json"
+nbpApi.exchangeRates.url="https://api.nbp.pl/api/exchangerates/tables/A/{date}/?format=json"
