Set up WebClient and add classes CurrencyService and CurrencyController
create methods getCurrency and configuration WebClient. Obtain access to data from api.nbp.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=smart-money
 
-nbpApi.exchangeRates.url="https://api.nbp.pl/api/exchangerates/tables/A/{date}/?format=json"
+nbpApi.exchangeRates.url=https://api.nbp.pl/api/exchangerates/tables/A/{date}/?format=json
